--- a/frontend/src/components/HeaderNav/HeaderNav.css
+++ b/frontend/src/components/HeaderNav/HeaderNav.css
@@ -1,12 +1,11 @@
-@import 'bootstrap/dist/css/bootstrap.min.css';
-
 .nav-header {
   height: var(--header-height);
   background-color: var(--first-color);
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 1rem;
+  padding: 0;
+  margin: 0;
   position: fixed;
   width: 100%;
   z-index: var(--z-fixed);
