--- a/frontend/src/components/Toolbar/Toolbar.css
+++ b/frontend/src/components/Toolbar/Toolbar.css
@@ -1,21 +1,15 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
 .node-menu {
-  height: 2rem;
+  height: var(--toolbar-height);
   background-color: rgb(198, 237, 208);
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 16.5rem;
   gap: 10px;
-  position: fixed;
-  width: calc(100% - 16rem);
+  position: sticky;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  left: 0;
-  right: 0;
-  top: var(--header-height);
   z-index: 10;
-  overflow: hidden;
   border-radius: 0 0 6px 6px;
 }
 
@@ -46,9 +40,7 @@
   border-radius: 4px;
 }
 
-@media (max-width: 800px) {
-  .node-menu {
-    margin-left: 0 !important;
-    width: 100% !important;
-  }
+#toolbar-container {
+  padding: 0;
+  margin: 0;
 }
