--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,3 @@
-/* index.css */
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -11,8 +10,12 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  --header-height: 3.5rem;
-  --footer-height: 7rem;
+  --header-height: 3rem;
+  --toolbar-height: 2rem;
+  --footer-height: 5rem;
+  --z-tooltip: 10;
+  --z-fixed: 100;
+  --collapse-at-width: 600px;
   --first-color: hsl(145, 37%, 55%);
   --title-color: hsl(0, 0%, 95%);
   --text-color: hsl(0, 0%, 75%);
@@ -22,15 +25,15 @@
   --h2-font-size: 1.25rem;
   --small-font-size: 0.813rem;
   --font-semi-bold: 600;
-  --z-tooltip: 10;
-  --z-fixed: 100;
-  --collapse-at-width: 850px;
 }
 
-* {
+*,
+::before,
+::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  /* outline: 1px solid red; */
 }
 
 body,
@@ -38,16 +41,19 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow-x: hidden;
+  overflow-x: visible;
 }
 
 .main-layout {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 .content-wrapper {
+  margin-top: var(--header-height);
   display: flex;
   flex-grow: 1;
 }
@@ -58,9 +64,41 @@ html {
 
 .footer {
   background-color: #f1f1f1;
-  padding: 1rem;
   text-align: center;
   position: relative;
   bottom: 0;
   width: 100%;
+}
+
+/* Copied from https://reactrouter.com/en/main/start/tutorial#handling-not-found-errors */
+#error-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 0.9rem;
+}
+
+.chart-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin-bottom: 1rem;
+}
+
+.card-body {
+  padding-bottom: 0.2rem;
+  min-height: 15rem;
+}
+
+.card-form-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 2.5rem;
+}
+
+.card-form-heading {
+  font-size: 1.5rem;
 }
